--- a/index.css
+++ b/index.css
@@ -335,6 +335,7 @@ header table {
     position:relative;
     top:-25px;
     left:30px;
+    width: 80%;
 }
 #footer {
     border-top: 3px solid rgba(255, 44, 90,0.5);
